--- a/ansible/roles/jboss-eap-service/templates/jboss-eap.conf.j2
+++ b/ansible/roles/jboss-eap-service/templates/jboss-eap.conf.j2
@@ -2,3 +2,5 @@ JBOSS_HOME={{ jboss_eap_home }}
 JBOSS_USER={{ jboss_eap_user }}
 JBOSS_CONFIG=standalone-full.xml
 JBOSS_OPTS=""
+
+export JAVA_OPTS="{{ java_opts }}"
