Add git to installed packages, enable 'git push' in hook

--- a/ansible/roles/rhdm-central/templates/post-commit.j2
+++ b/ansible/roles/rhdm-central/templates/post-commit.j2
@@ -1,4 +1,4 @@
 #!/bin/bash
 
-echo "Hello, post-commit git hook from $(pwd)"
-# git push origin master &> /dev/null
+echo "Execute post-commit git hook from $(pwd)"
+git push origin master
