--- a/roles/rhdm-central/templates/post-commit.j2
+++ b/roles/rhdm-central/templates/post-commit.j2
@@ -1,4 +1,6 @@
 #!/bin/bash
 
 echo "Execute post-commit git hook from $(pwd)"
+{% if rhdm_central_git_hooks_enable_push is sameas true %}
 git push origin master
+{% endif %}
