Add to unmanaged the kieserver state file with the containers to start up

--- a/roles/rhdm-central/templates/settings.xml.j2
+++ b/roles/rhdm-central/templates/settings.xml.j2
@@ -52,6 +52,7 @@
           <url>{{ rhdm_central_maven_jboss_enterprise_repo_url }}</url>
           <releases>
             <enabled>true</enabled>
+            <updatePolicy>daily</updatePolicy>
           </releases>
           <snapshots>
             <enabled>false</enabled>
@@ -64,6 +65,7 @@
           <url>{{ rhdm_central_maven_jboss_enterprise_repo_url }}</url>
           <releases>
             <enabled>true</enabled>
+            <updatePolicy>daily</updatePolicy>
           </releases>
           <snapshots>
             <enabled>false</enabled>
