--- a/roles/rhdm-server/templates/settings.xml.j2
+++ b/roles/rhdm-server/templates/settings.xml.j2
@@ -76,6 +76,7 @@
           <url>{{ rhdm_server_maven_jboss_enterprise_repo_url }}</url>
           <releases>
             <enabled>true</enabled>
+            <updatePolicy>daily</updatePolicy>
           </releases>
           <snapshots>
             <enabled>false</enabled>
@@ -88,6 +89,7 @@
           <url>{{ rhdm_server_maven_jboss_enterprise_repo_url }}</url>
           <releases>
             <enabled>true</enabled>
+            <updatePolicy>daily</updatePolicy>
           </releases>
           <snapshots>
             <enabled>false</enabled>
