Add immutable kie server mode

--- a/roles/rhdm-server/templates/kieserver.xml.j2
+++ b/roles/rhdm-server/templates/kieserver.xml.j2
@@ -1,23 +1,7 @@
 <kie-server-state>
   <controllers/>
   <configuration>
-    <configItems>
-      <config-item>
-        <name>org.kie.executor.disabled</name>
-        <value>{{ org_kie_executor_disabled }}</value>
-        <type>java.lang.String</type>
-      </config-item>
-      <config-item>
-        <name>org.kie.server.id</name>
-        <value>{{ org_kie_server_id }}</value>
-        <type>java.lang.String</type>
-      </config-item>
-      <config-item>
-        <name>org.kie.server.mode</name>
-        <value>{{ org_kie_server_mode }}</value>
-        <type>java.lang.String</type>
-      </config-item>
-    </configItems>
+    <configItems/>
   </configuration>
   <containers>
   {% for container in rhdm_server_containers %}
