Rename all rhdm entries to rhpam

--- a/roles/rhdm-server/templates/kieserver.xml.j2
+++ b/roles/rhdm-server/templates/kieserver.xml.j2
@@ -4,7 +4,7 @@
     <configItems/>
   </configuration>
   <containers>
-  {% for container in rhdm_server_containers %}
+  {% for container in rhpam_server_containers %}
   <container>
       <containerId>{{ container.containerId }}</containerId>
       <releaseId>
