Rename refs decision-central to business-central

--- a/roles/rhpam-server/templates/settings.xml.j2
+++ b/roles/rhpam-server/templates/settings.xml.j2
@@ -48,7 +48,7 @@
 
   <profiles>
 
-    <!-- Configure the Decision Central (Workbench) Maven repository -->
+    <!-- Configure the Business Central (Workbench) Maven repository -->
     <profile>
       <id>rhpam</id>
       <repositories>
