Add STARTUP_WAIT=90 to systemd svc

--- a/roles/jboss-eap-service/templates/jboss-eap.conf.j2
+++ b/roles/jboss-eap-service/templates/jboss-eap.conf.j2
@@ -3,4 +3,6 @@ JBOSS_USER={{ jboss_eap_svc_user }}
 JBOSS_CONFIG=standalone-full.xml
 JBOSS_OPTS=""
 
+STARTUP_WAIT=90
+
 export JAVA_OPTS="{{ jboss_eap_svc_java_opts | default('') }}"
